test/types/tuple/diten/underscore_is_special.good
underscore_is_special.chpl:1: error: Throwaway variable '_' is not allowed in this context
underscore_is_special.chpl:3: error: Throwaway variable '_' is not allowed in this context
underscore_is_special.chpl:4: error: Throwaway variable '_' is not allowed in this context
